--- a/Analysis/metagenomic_analysis.Rmd
+++ b/Analysis/metagenomic_analysis.Rmd
@@ -8,7 +8,7 @@ output:
 
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
-knitr::opts_knit$set(root.dir = setwd("/Users/Usuario/Desktop/Bioinformatica/Practicas/Functional_tables/functional.tables/"))
+knitr::opts_knit$set(root.dir = setwd("/Users/Usuario/Desktop/Bioinformatica/Practicas/Practicas/Analysis/"))
 ```
 
 ## Loading necessary libraries
